--- a/public/style.css
+++ b/public/style.css
@@ -64,7 +64,8 @@
     font-size: 1vw; 
 }
 
-.form-group input[type="text"], 
+.form-group input[type="text"],
+.form-group input[type="email"], 
 .form-group input[type="password"] {
     width: 100%;
     padding: 1vh;
@@ -76,6 +77,7 @@
 }
 
 .form-group input[type="text"]::placeholder,
+.form-group input[type="email"]::placeholder,
 .form-group input[type="password"]::placeholder {
     color: white;
     font-weight: bold;
