--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,10 +13,10 @@
         
         <form name="read-user" action="read-user" method="post">
             <div class="form-group">
-                <input name="email" id="email-field" type="text" placeholder="Email"></input>
+                <input name="email" id="email-field" type="email" placeholder="Email" required></input>
             </div>
             <div class="form-group">
-                <input name="password" id="password-field" type="password" placeholder="Password"></input>
+                <input name="password" id="password-field" type="password" placeholder="Password" required></input>
             </div>
             <div class="form-group">
                 <div class="miniform-group">
