--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -13,13 +13,13 @@
         
         <form name="create-user" action="create-user" method="post">
             <div class="form-group">
-                <input name="name" id="name-field" type="text" placeholder="Name"></input>
+                <input name="name" id="name-field" type="text" placeholder="Name" required></input>
             </div>
             <div class="form-group">
-                <input name="email" id="email-field" type="text" placeholder="Email"></input>
+                <input name="email" id="email-field" type="email" placeholder="Email" required></input>
             </div>
             <div class="form-group">
-                <input name="password" id="password-field" type="password" placeholder="Password"></input>
+                <input name="password" id="password-field" type="password" placeholder="Password" minlength="8" required></input>
             </div>
             
             <input type="submit" class="registration" value="Sign Up"></input>
