--- a/public/style.css
+++ b/public/style.css
@@ -74,6 +74,7 @@
     border-bottom: 2px solid white;
     outline: none;
     font-size: 1vw;
+    color:white;
 }
 
 .form-group input[type="text"]::placeholder,
